// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="menu abs-width-300"
>
  <MultiSelect
    allowNewElements={false}
    allowSelection={true}
    elements={Array []}
    filterSelected={[MockFunction]}
    footerNode=""
    listSize={0}
    onSearch={[MockFunction]}
    onSelect={[Function]}
    onUnselect={[MockFunction]}
    placeholder="search.search_for_tags"
    renderLabel={[Function]}
    selectedElements={Array []}
    validateSearchInput={[Function]}
  />
</div>
`;

exports[`should render correctly whith 6+ selected elements 1`] = `
<div
  className="menu abs-width-300"
>
  <MultiSelect
    allowNewElements={false}
    allowSelection={false}
    elements={Array []}
    filterSelected={[MockFunction]}
    footerNode={
      <Alert
        className="spacer-left spacer-right spacer-top"
        variant="info"
      >
        project_activity.graphs.custom.add_metric_info
      </Alert>
    }
    listSize={0}
    onSearch={[MockFunction]}
    onSelect={[Function]}
    onUnselect={[MockFunction]}
    placeholder="search.search_for_tags"
    renderLabel={[Function]}
    selectedElements={
      Array [
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
      ]
    }
    validateSearchInput={[Function]}
  />
</div>
`;

exports[`should render correctly with type filter 1`] = `
<div
  className="menu abs-width-300"
>
  <MultiSelect
    allowNewElements={false}
    allowSelection={true}
    elements={Array []}
    filterSelected={[MockFunction]}
    footerNode={
      <Alert
        className="spacer-left spacer-right spacer-top"
        variant="info"
      >
        project_activity.graphs.custom.type_x_message.metric.type.filter1, metric.type.filter2
      </Alert>
    }
    listSize={0}
    onSearch={[MockFunction]}
    onSelect={[Function]}
    onUnselect={[MockFunction]}
    placeholder="search.search_for_tags"
    renderLabel={[Function]}
    selectedElements={Array []}
    validateSearchInput={[Function]}
  />
</div>
`;
